add plans and update plans' ;

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -32,19 +32,15 @@ body,
 
   .btn {
     @apply w-full
-    px-6
-    py-2.5
-    bg-cyan-500
-    text-white
-    font-medium
-    text-xs
+    px-4 py-2 rounded border-gray-100 bg-sky-500 text-white self-end
+
+ 
+
     leading-tight
     uppercase
     rounded
     shadow-md
-    hover:bg-cyan-700 hover:shadow-lg
-    focus:bg-cyan-700 focus:shadow-lg focus:outline-none focus:ring-0
-    active:bg-cyan-800 active:shadow-lg
+   
     transition
     duration-150
     ease-in-out;
